# linear-cli

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  justfile  rustfmt.toml
graphql/: issue-show.graphql  issue-update.graphql  linear-api.graphql  list-issues.graphql  team_list.graphql  update-issue.graphql  workflow_state_list.graphql
src/: client.rs  main.rs  shared.rs
src/requests/: list_issues.rs  list_workflow_states.rs  me.rs  mod.rs
src/requests/issue/: list.rs  mod.rs  show.rs  update.rs
src/requests/team/: list.rs
