[package]
name = "lr"
version = "0.1.0"
edition = "2021"

[dependencies]
bon = "2.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
color-eyre = "0.6.3"
comfy-table = "7.1.1"
eyre = "0.6.12"
graphql_client = { version = "0.14.0", features = ["reqwest-rustls"] }
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
